[package]
name = "psp"
description = "Cross-platform power state events plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
libc = "0.2"
crossbeam-channel = "0.5"

[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2"
cocoa = "0.24"
core-foundation = "0.9"
core-graphics = "0.22"
dispatch = "0.2"
scopeguard = "1.1"
png = "0.17"

[dev-dependencies]
tao = "0.20.0"
