[package]
name = "psp"
description = "Cross-platform power state events plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
libc = "0.2"
crossbeam-channel = "0.5"

[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2"
cocoa = "0.24"
core-foundation = "0.9"
core-graphics = "0.22"
dispatch = "0.2"
scopeguard = "1.1"
png = "0.17"

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.48", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_Power",
  "Win32_System_RemoteDesktop",
  "Win32_System_SystemServices",
  "Win32_UI_Controls",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tao = "0.20.0"
